# watch-it

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  scope.md
src/watch_mcp/: __init__.py  config.py  models.py  server.py
src/watch_mcp/pipeline/: __init__.py  download.py  events.py  frames.py  ocr.py  scenes.py
src/watch_mcp/providers/: __init__.py  base.py  openai_compat.py  stub.py
tests/: test_events_parse.py  test_models.py  test_pipeline_stub.py
